# django-mini-ebay

./: .gitignore  Dockerfile  README.md  delete_migrations.py  pyproject.toml  requirements.txt
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/carts/: admin.py  forms.py  models.py  urls.py  views.py
apps/carts/migrations/: 0001_initial.py
apps/orders/: admin.py  models.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_alter_order_options.py
apps/orders/templatetags/: custom_filters.py
apps/products/: admin.py  forms.py  models.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py
apps/sales/: urls.py  views.py
config/: settings.py  urls.py
templates/: base.html
templates/carts/: cart.html
templates/orders/: order.html  order_detail.html  order_list.html
templates/products/: product_detail.html  product_list.html  product_list_copy.html
templates/registration/: edit.html  login.html  password_change.html  password_change_done.html  signup.html
templates/sales/: edit_product.html  register_product.html  sales_list.html
